--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,2 +1,2 @@
-<h1>Reports#index</h1>
-<p>Find me in app/views/reports/index.html.erb</p>
+<h1>ようこそ、<%= current_user.name || current_user.email %> さん！</h1>
+<p>ログイン後の専用ページです。</p>
