--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
+    <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
   </head>
 
   <body class="bg-dark text-light">
@@ -16,7 +16,7 @@
       <div class="container">
         <a class="navbar-brand" href="/">MyCoolApp</a>
         <% if logged_in? %>
-          <%= link_to "Logout", logout_path, method: :delete, class: "btn btn-outline-light" %>
+          <%= link_to "Logout", logout_path, method: :delete, class: "btn btn-outline-light", data: { confirm: "ログアウトしますか?" } %>
         <% else %>
           <%= link_to "Login", login_path, class: "btn btn-outline-light" %>
         <% end %>
