--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <h1>ユーザー登録</h1>
 
-<%= form_with model: @user, url: signup_path, local: true do |f| %>
+<%= form_with model: @user do |f| %>
   <div class="mb-3">
     <%= f.label :name, "名前" %>
     <%= f.text_field :name, class: "form-control" %>
@@ -23,3 +23,6 @@
 
   <%= f.submit "登録", class: "btn btn-primary" %>
 <% end %>
+ <div class='text-center'>
+    <%= link_to 'ログインページへ', login_path %>
+  </div>
