--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
       <div class="container">
         <a class="navbar-brand" href="/">MyCoolApp</a>
         <% if logged_in? %>
-          <%= link_to "Logout", logout_path, method: :delete, class: "btn btn-outline-light", data: { confirm: "ログアウトしますか?" } %>
+          <%= link_to "Logout", logout_path, method: :delete, data: { turbo_method: :delete }, class: "btn btn-outline-light" %>
         <% else %>
           <%= link_to "Login", login_path, class: "btn btn-outline-light" %>
         <% end %>
