--- a/app/views/reports/new.html.erb
+++ b/app/views/reports/new.html.erb
@@ -1,2 +1,18 @@
-<h1>Reports#new</h1>
-<p>Find me in app/views/reports/new.html.erb</p>
+<h1>新規日報作成</h1>
+
+<%= form_with model: @report, local: true do |f| %>
+    <div class="form-group">
+      <%= f.label :title, "タイトル" %><br>
+      <%= f.text_field :title, class: 'form-control', style: 'width: 100%' %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :body, "本文" %><br>
+      <%= f.text_area :body, class: 'form-control', rows:10, style: 'width: 100%' %>
+    </div>
+
+    <div style="margin-top: 1rem;">
+      <%= f.submit "登録", class: "btn btn-primary" %>
+      <%= link_to "一覧に戻る", reports_path, class: "btn btn-secondary", style: "margin-left: 10px;" %> 
+    </div>
+<% end %>
