--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,6 +1,6 @@
 <div class="text-center py-5">
-  <h1 class="display-3 fw-bold">業務日報アプリ</h1>
-  <p class="lead">毎日の仕事をスマートに記録しましょう。</p>
+  <h1 class="display-3 fw-bold" style="color: #007bff;">業務日報アプリ</h1>
+  <p class="lead" style="color: #555;">毎日の仕事をスマートに記録しましょう。</p>
   <% if !logged_in? %>
     <%= link_to "ユーザー登録", new_user_path, class: "btn btn-primary btn-lg mt-3" %>
   <% else %>
