--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <meta name="turbo-cache-control" content="no-cache">
   </head>
 
-  <body class="bg-dark text-light">
+  <body class="bg-light text-light">
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4">
       <div class="container">
         <a class="navbar-brand" href="/">MyCoolApp</a>
