--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,15 +7,16 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
+    <link rel="icon" href="<%= asset_path 'memo.man2.jpg' %>" type="image/jpg">
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
     <meta name="turbo-cache-control" content="no-cache">
   </head>
 
-  <body class="bg-light text-light">
+  <body class="bg-light text-light" style="background-image: url('<%= asset_path("memo.man.jpg") %>'); background-size: cover; background-position: center; background-repeat: no-repeat; background-attachment: fixed;">
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4">
       <div class="container">
-        <a class="navbar-brand" href="/">MyCoolApp</a>
+        <a class="navbar-brand" href="/">Workreports</a>
         <% if logged_in? %>
           <%= link_to "Logout", logout_path, method: :delete, data: { turbo_method: :delete }, class: "btn btn-outline-light" %>
         <% else %>
@@ -33,7 +34,7 @@
       <% end %>
     </div>
 
-    <div class="container">
+    <div class="container p-4 rounded" style="background-color: rgba(255,255,255,0.9);">
       <%= yield %>
     </div>
   </body>
