--- a/app/views/reports/edit.html.erb
+++ b/app/views/reports/edit.html.erb
@@ -15,6 +15,6 @@
 
     <div style="margin-top: 1rem;">
       <%= f.submit "更新", class: "btn btn-primary" %>
-      <%= link_to "一覧に戻る", report_path, class: "btn btn-secondary", style: "margin-left: 10px;" %>
+      <%= link_to "一覧に戻る", reports_path, class: "btn btn-secondary", style: "margin-left: 10px;" %>
     </div>
 <% end %>
